# t_opt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
problems/: quadratic.cpp  quadratic.hpp
problems/transport/: lpsdm.cpp  lpsdm.hpp  smvsdm2.cpp  smvsdm2.hpp  tsdm.cpp  tsdm.hpp
problems/transport/src/: sdm.cpp  sdm.hpp  tntp.cpp  tntp.hpp
t_opt/: utils.cpp  utils.hpp
t_opt/core/: blas.hpp  chrono.hpp  line_search.hpp  logger.cpp  logger.hpp  method.cpp  method.hpp  problem.cpp  problem.hpp  types.cpp  types.hpp
t_opt/line_search/: h_simple.cpp  h_simple.hpp  parabolic.cpp  parabolic.hpp
t_opt/local/: afgm.cpp  afgm.hpp  agmsdr.cpp  agmsdr.hpp  cg.cpp  cg.hpp  fgm.cpp  fgm.hpp  gdm.cpp  gdm.hpp  lbfgs.cpp  lbfgs.hpp  ufgm.cpp  ufgm.hpp
